kubernetes/backstage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage
  namespace: backstage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backstage
  template:
    metadata:
      labels:
        app: backstage
    spec:
      serviceAccountName: backstage
      containers:
        - name: backstage
          image: ghcr.io/nfvelten/backstage-poc:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 7007
---
apiVersion: v1
kind: Service
metadata:
  name: backstage
  namespace: backstage
spec:
  type: NodePort
  selector:
    app: backstage
  ports:
    - port: 80
      targetPort: 7007
      nodePort: 30080
